[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = {version = "0.4.21", no-default-features = true, features = ["alloc", "std", "clock"]}
config = "0.11"
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
uuid = {version = "1.1.2", features = ["v4"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6"

[dev-dependencies]
reqwest = "0.11"
